src/assets/Styles/workitem.scss
.workitem_card{
    display:flex;
    flex-direction:column;
    flex:480px; //resize width property
    gap:16px;
    position:relative;
    transition: .6s cubic-bezier(0, 0.5, 0, 1) all;
    // cursor:pointer;
    .cover_container{
        position:relative;
        border-radius:32px;
        background-color:#F1F1F1;
        height:480px;
        overflow:hidden;
        transition: .6s cubic-bezier(0, 0.5, 0, 1) all;
        .title_lg{
            position:absolute;
            color:white;
            // text-shadow: 0px 1px 2px #00000010;
            mix-blend-mode:difference;
            width:calc(100% - 32px);
            bottom:0;
            padding:0 16px;
            filter: blur(32px);
            opacity:0;
            transform: translateY(0px);
            transition: .3s cubic-bezier(0, 0.5, 0, 1) all;
            z-index:9;
        }
        .workitem_desc{
            width:calc(100% - 38px); //should resize with size of card
            padding:16px 22px 0 16px;
            position:absolute;
            bottom:24px;

            display: flex;
            flex-direction:row;
            align-items:center;
            justify-content:space-between;
            color:white;
            transition: .6s cubic-bezier(0, 0.5, 0, 1) all;
            .workitem_type{
                background-color: white;
                color:#1f1f1f;
                padding: 8px 16px;
                border-radius:32px;
            }
            p{
                mix-blend-mode: difference;
            }
        }
        img{
            width:100%;
            height: 100%; //temp
            object-fit:cover;
            // background: #000000; //temp
            // background:url("../Media/Images/imgplaceholder.png");
        }
        video{
            height:100%;
            width:100%;
            object-fit:cover;
        }
    }
    .title_sm{
        padding-left: 16px;
    }
    &:hover, .comingsoon{
        transition: .3s cubic-bezier(0, 0.5, 0, 1) all;
        .cover_container::before{
            content: '';
            position: absolute;
            top: 0%;
            left: 0;
            width: 100%;
            height: 100%;
            background:hsla(0, 0%, 100%, 0.3);
            // filter:blur(16px);
            backdrop-filter:blur(1px);
        }
        .workitem_desc{
            bottom:calc(100% - 48px);
            top:0;
        }
        .title_lg{
            filter: blur(0px);
            opacity: 1;
            transform: translateY(-16px);
        }
    }
}

.dump_card{
    display:flex;
    flex-direction:column;
    gap:8px;
    position:relative;
    transition: .6s cubic-bezier(0, 0.5, 0, 1) all;
    flex:320px;
    height:320px;
    max-width:400px;

    .cover_container{
        position:relative;
        border-radius:32px;
        background-color:#F1F1F1;
        height:320px;
        overflow:hidden;
        transition: .6s cubic-bezier(0, 0.5, 0, 1) all;
        a{
            // mix-blend-mode: difference;
            color:#ffffff;
            text-shadow: 0 .5px 1px hsla(0, 0%, 0%, 0.2);
            text-decoration: none;
            position:absolute;
            bottom:16px;
            left:16px;
            z-index: 99;
            font-size: 14px;
        }
    }

    img{
        width:100%;
        height: 100%;
        object-fit:cover;
    }
    video{
        width:100%;
        height: 100%;
        object-fit:cover;
    }
    .title_sm{
        padding-left: 16px;
        h5{
            font-size: 14px;
        }
    }
}

.comingsoon{
    pointer-events: none;
    &:hover{
        pointer-events: none;
        img{
            border-radius:32px;
        }
    }
}

